@@ -1,7 +1,10 @@
 = ?.?.?
 * bug fix
-  * filter on a date column
-  * using date column caused FormPanel to crash
+  * Filter on a date column.
+  * Using date column caused FormPanel to crash.
+
+* API changes
+  * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.
 
 = 0.7.1 - 2011-09-04
 * bug fix
